--- a/no-db-project/src/App.css
+++ b/no-db-project/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: blueviolet
 }
 
 .App-logo {
@@ -25,4 +26,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Welcome {
+  color: blue;
+}
+
+.blue-picture-back {
+  background-color: blue;
 }
