--- a/no-db-project/src/App.css
+++ b/no-db-project/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'PokemonSolid';
+    src: url('Pokemon Solid.ttf')
+}
+
 .App {
     background-color: rgba(244, 228, 245, 0.808);
 }
@@ -81,16 +86,20 @@
 }
 
 .Welcome {
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: blue;
    color: yellow;
    font-size: 50px;
+   font-family: 'PokemonSolid';
+   letter-spacing: 4px;
 }
 
 .Defeat-Text {
     -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: blue;
    color: yellow;
+   font-family: 'PokemonSolid';
+   letter-spacing: 3px;
 }
 
 .Welcome-Text-Box-Top {
@@ -181,6 +190,12 @@
     
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 260px;
+    padding-top: 5px;
+    
+    
 }
 
 /* ----- */
@@ -240,5 +255,6 @@
     width: 120px;
     
     padding-left: 10%;
+    padding-top: 3px;
 }
 
