--- a/no-db-project/src/App.css
+++ b/no-db-project/src/App.css
@@ -258,3 +258,13 @@
     padding-top: 3px;
 }
 
+input {
+    border-radius: 3px;
+}
+button:hover {
+    background-color: rgba(48, 119, 252, 0.685);
+    border: 1px solid black;
+    border-radius: 3px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    
+}
